# umap-tool

./: .gitignore  README.md  pyproject.toml
data/: .gitignore
docs/notebooks/: .gitignore
src/umap_tool/: cli.py  config.py  map_config.py  tools.py
