[tool.poetry]
name = "umap-tool"
version = "0.0.1"
description = "ToDo"
authors = ["kvanmol"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "umap_tool", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
geojson = "^3.1.0"
gpxpy = "^1.6.2"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[tool.poetry.group.docs.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
